Bullet Physic Rigid Body Updates In Viewport Playback, Object Using Constraints (Loc,Rot) Breaks One Frame In To Animation When Rendering, But Viewport Playback Updates Correctly #42294

Closed
opened 2014-10-19 13:18:55 +02:00 by Martin Lindelöf · 14 comments

System Information
Operating system and graphics card

Win 8.1, nv gfx 580

Blender Version
Broken: 2.72a 2014-10-18 15:49 c35a649 // buildbot
Worked: 2.71 http://instagram.com/p/ukfI2PI7_K/ <--- video comparisson.

Short description of error
Summary:
Viewport playback of a rigid body simulation with an object using copy loc & rot constraints works, rendering doesn't.

Long desc:
Using A Bullet Physics Object for placeholder during Rigid Body Simulation, Render Object has two constraints copy location and copy rotation to update according to the bphysics rigid object.
I've done this because the Render Object in question has Armature. First I tried parenting to the Rigid Body, but since it's just a placeholder and I want it to be invisible for rendering, it's children becomes invisible.
That's when I came up with the idea to have them totally seperate and just copy loc/rot from the Rigid Body. And it works pretty well when baked, in viewport no visual errors. When rendering it only works the very first frame,
2nd frame into animation, the render object is gone. I have no idea where, since viewport playback works.

I investigated it a bit more, 2.71 works perfect, but 2.72a & 2.72b I get all kinda weird behavious on just simple scenes with rigid body physics, in one case (the video http://instagram.com/p/ukfI2PI7_K/) they're just invisible.
anything connected to them via constraints or parenting dissapears also during rendering. Viewport playback works great.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I can attach the file, minimal steps is just playback in viewport [ALT+A] and check that it's working, then try render on frame 1, and 2 and see the difference for me frame1 it's visible, frame2 it's gone. Talking about the small cube (render object) with a cute face.untitled.blend

**System Information** Operating system and graphics card Win 8.1, nv gfx 580 **Blender Version** Broken: 2.72a 2014-10-18 15:49 c35a649 // buildbot Worked: 2.71 http://instagram.com/p/ukfI2PI7_K/ <--- video comparisson. **Short description of error** **Summary:** Viewport playback of a rigid body simulation with an object using copy loc & rot constraints works, rendering doesn't. **Long desc:** Using A Bullet Physics Object for placeholder during Rigid Body Simulation, Render Object has two constraints copy location and copy rotation to update according to the bphysics rigid object. I've done this because the Render Object in question has Armature. First I tried parenting to the Rigid Body, but since it's just a placeholder and I want it to be invisible for rendering, it's children becomes invisible. That's when I came up with the idea to have them totally seperate and just copy loc/rot from the Rigid Body. And it works pretty well when baked, in viewport no visual errors. When rendering it only works the very first frame, 2nd frame into animation, the render object is gone. I have no idea where, since viewport playback works. I investigated it a bit more, 2.71 works perfect, but 2.72a & 2.72b I get all kinda weird behavious on just simple scenes with rigid body physics, in one case (the video http://instagram.com/p/ukfI2PI7_K/) they're just invisible. anything connected to them via constraints or parenting dissapears also during rendering. Viewport playback works great. **Exact steps for others to reproduce the error** *Based on a (as simple as possible) attached .blend file with minimum amount of steps* I can attach the file, minimal steps is just playback in viewport [ALT+A] and check that it's working, then try render on frame 1, and 2 and see the difference for me frame1 it's visible, frame2 it's gone. Talking about the small cube (render object) with a cute face.[untitled.blend](https://archive.blender.org/developer/F118320/untitled.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MartinLindelof

Added subscriber: @MartinLindelof
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Joshua Leung self-assigned this 2014-10-20 02:24:49 +02:00
Member

IIRC, this is a consequence of limitations on the way that things are evaluated in Blender currently. The rigidbody sim can only happen once all objects (and thus, their constraints) have been evaluated, as it needs to take into account where collision objects have moved to.

So, known limitation that cannot be fixed in current Blender :(

IIRC, this is a consequence of limitations on the way that things are evaluated in Blender currently. The rigidbody sim can only happen once all objects (and thus, their constraints) have been evaluated, as it needs to take into account where collision objects have moved to. So, known limitation that cannot be fixed in current Blender :(
Author
Member

Oh that's weird, because the viewport playback goes well, the rigid body does the simulation and the object with constraint updates well. Until it's rendering, I remember now that I am running on GPU will check if it's working on CPU. If it could be something that gets disconnected when building BVH and sent over to GPU. I will investigate and try to find a work around. I want to have 200 or 300 of these objects later on and let the bullet physics do the simulation and bake it.

Oh that's weird, because the viewport playback goes well, the rigid body does the simulation and the object with constraint updates well. Until it's rendering, I remember now that I am running on GPU will check if it's working on CPU. If it could be something that gets disconnected when building BVH and sent over to GPU. I will investigate and try to find a work around. I want to have 200 or 300 of these objects later on and let the bullet physics do the simulation and bake it.
Author
Member

I think it was closed to early, because testing at work on Mac and CPU render, it's not a problem to have placeholder bullet physics object, then have objects with constraints to copy Loc&Rot from the simulated physics objects. And it works flawless. I am thinking when using GPU rendering in Cycles it might be a bug, that objects which properties are used in constraints aren't being calculated first or something. test_instablast0001-0050.mov

Im attaching a viewport render, (which worked great in my .blend file), but also a CPU/CYCLES rendered animation which where the constraints works. test0001-0050.mov

I think it was closed to early, because testing at work on Mac and CPU render, it's not a problem to have placeholder bullet physics object, then have objects with constraints to copy Loc&Rot from the simulated physics objects. And it works flawless. I am thinking when using GPU rendering in Cycles it might be a bug, that objects which properties are used in constraints aren't being calculated first or something. [test_instablast0001-0050.mov](https://archive.blender.org/developer/F118834/test_instablast0001-0050.mov) Im attaching a viewport render, (which worked great in my .blend file), but also a CPU/CYCLES rendered animation which where the constraints works. [test0001-0050.mov](https://archive.blender.org/developer/F118835/test0001-0050.mov)
Author
Member

Joshua, I had older projects with bullet physics, rigid bodies. from 2.71, I tried a simple scene with boxes falling, it's working great on GPU/CYCLES in 2.71, not so great in latest buildbot 2.72(b?). check out the video.
http://instagram.com/p/ukfI2PI7_K/

if it is so, that there's been changes to evaluations in current 2.72 versions that brake this, I think it's important to fix it. since it works in viewport etcetera rendering is just broken. doesn't look good for new users. For me I can work around, use 2.72 to make my scenes and render with 2.71.

can you change status to "investigate" from "archived" I think this bug, or broken feature needs to be looked into more.

Joshua, I had older projects with bullet physics, rigid bodies. from 2.71, I tried a simple scene with boxes falling, it's working great on GPU/CYCLES in 2.71, not so great in latest buildbot 2.72(b?). check out the video. http://instagram.com/p/ukfI2PI7_K/ if it is so, that there's been changes to evaluations in current 2.72 versions that brake this, I think it's important to fix it. since it works in viewport etcetera rendering is just broken. doesn't look good for new users. For me I can work around, use 2.72 to make my scenes and render with 2.71. can you change status to "investigate" from "archived" I think this bug, or broken feature needs to be looked into more.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Hmm... looks like this may not have been what I thought it was. Reopening :)

Hmm... looks like this may not have been what I thought it was. Reopening :)
Joshua Leung removed their assignment 2014-10-25 12:05:43 +02:00
Author
Member

did some work on my scene during bconf, I played around with motion blur setting (default 0.5) to 1.0, and 2.0 it didn't seem to have any effect on the Rigid Bodies rendering or not. But sometimes when selecting a object that is not a RB or anything but has animation, and rendering it sometimes worked. really really weird. by working I mean F12 rendering a frame.

Shift+Z to render viewport, always works, as stated before, viewport update for the RB simulation always worked. So my hunch it is something to do when sending to GPU, BVH Building?

the BVH building is way to fast in blender to even see it :D in simpler scenes, but I dunno if viewport rendering builds a BVH or not, F12 render frame does it. It's just speculations, and I have no insight or idea about Cycles code but maybe BVH had have some updates recently?

did some work on my scene during bconf, I played around with motion blur setting (default 0.5) to 1.0, and 2.0 it didn't seem to have any effect on the Rigid Bodies rendering or not. But sometimes when selecting a object that is not a RB or anything but has animation, and rendering it sometimes worked. really really weird. by working I mean F12 rendering a frame. Shift+Z to render viewport, always works, as stated before, viewport update for the RB simulation always worked. So my hunch it is something to do when sending to GPU, BVH Building? the BVH building is way to fast in blender to even see it :D in simpler scenes, but I dunno if viewport rendering builds a BVH or not, F12 render frame does it. It's just speculations, and I have no insight or idea about Cycles code but maybe BVH had have some updates recently?

This issue was referenced by f7dedbc3ce

This issue was referenced by f7dedbc3ce101d80366540f73842f90091a88a1e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit f7dedbc3ce.

Closed by commit f7dedbc3ce.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42294
No description provided.