Fix T42294: Bullet rigidbody point cache reading was using uninitialized key values for velocity.